--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@jovijovi/ether-keystore",
-  "version": "0.1.3",
+  "version": "0.1.4",
   "description": "A keystore toolkit for Ethereum ecosystem",
   "author": "jovijovi <mageyul@hotmail.com>",
   "license": "MIT",
@@ -11,7 +11,8 @@
     "ethereum",
     "ether",
     "keystore",
-    "wallet"
+    "wallet",
+    "crypto"
   ],
   "main": "./lib/index.js",
   "module": "./lib/index.js",
@@ -27,10 +28,10 @@
     "@tsconfig/node16": "^1.0.2",
     "@typechain/ethers-v5": "10.0.0",
     "@types/jest": "27.4.1",
-    "@types/node": "17.0.25",
-    "@typescript-eslint/eslint-plugin": "^5.20.0",
-    "@typescript-eslint/parser": "^5.20.0",
-    "eslint": "^8.13.0",
+    "@types/node": "17.0.29",
+    "@typescript-eslint/eslint-plugin": "^5.21.0",
+    "@typescript-eslint/parser": "^5.21.0",
+    "eslint": "^8.14.0",
     "jest": "27.5.1",
     "ts-jest": "27.1.4",
     "ts-node": "10.7.0",
@@ -38,7 +39,7 @@
     "typescript": "4.6.3"
   },
   "dependencies": {
-    "@jovijovi/pedrojs-common": "^1.0.21",
+    "@jovijovi/pedrojs-common": "^1.0.23",
     "ethers": "5.6.4"
   }
 }
