--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@jovijovi/ether-keystore",
-  "version": "0.1.12",
+  "version": "0.1.13",
   "description": "A keystore toolkit for Ethereum ecosystem",
   "author": "jovijovi <mageyul@hotmail.com>",
   "license": "MIT",
@@ -17,6 +17,10 @@
   "main": "./lib/index.js",
   "module": "./lib/index.js",
   "types": "./lib/index.d.ts",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/jovijovi/ether-keystore.git"
+  },
   "scripts": {
     "clean": "rm -rf ./dist/*",
     "test": "jest --coverage --forceExit",
@@ -24,22 +28,22 @@
     "clean-pub": "rm -rf ./publish/* && mkdir -p ./publish",
     "prepub": "yarn clean-pub && yarn build && cp -ap ./dist/lib ./publish/lib && cp -ap LICENSE ./publish/ && cp -ap package.json ./publish/ && cp -ap README.md ./publish/"
   },
+  "dependencies": {
+    "@jovijovi/pedrojs-common": "^1.1.14",
+    "ethers": "5.6.9"
+  },
   "devDependencies": {
     "@tsconfig/node16": "^1.0.3",
     "@typechain/ethers-v5": "10.1.0",
-    "@types/jest": "28.1.6",
-    "@types/node": "18.6.3",
-    "@typescript-eslint/eslint-plugin": "^5.32.0",
-    "@typescript-eslint/parser": "^5.32.0",
-    "eslint": "^8.21.0",
+    "@types/jest": "28.1.7",
+    "@types/node": "18.7.6",
+    "@typescript-eslint/eslint-plugin": "^5.33.1",
+    "@typescript-eslint/parser": "^5.33.1",
+    "eslint": "^8.22.0",
     "jest": "28.1.3",
-    "ts-jest": "28.0.7",
+    "ts-jest": "28.0.8",
     "ts-node": "10.9.1",
     "typechain": "8.1.0",
     "typescript": "4.7.4"
-  },
-  "dependencies": {
-    "@jovijovi/pedrojs-common": "^1.1.12",
-    "ethers": "5.6.9"
   }
 }
