--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@jovijovi/ether-keystore",
-  "version": "0.1.13",
+  "version": "0.2.0",
   "description": "A keystore toolkit for Ethereum ecosystem",
   "author": "jovijovi <mageyul@hotmail.com>",
   "license": "MIT",
@@ -30,13 +30,13 @@
   },
   "dependencies": {
     "@jovijovi/pedrojs-common": "^1.1.14",
-    "ethers": "5.6.9"
+    "ethers": "^5.7.0"
   },
   "devDependencies": {
     "@tsconfig/node16": "^1.0.3",
     "@typechain/ethers-v5": "10.1.0",
     "@types/jest": "28.1.7",
-    "@types/node": "18.7.6",
+    "@types/node": "18.7.9",
     "@typescript-eslint/eslint-plugin": "^5.33.1",
     "@typescript-eslint/parser": "^5.33.1",
     "eslint": "^8.22.0",
